# lead

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_public.yml
data/benchmark_routes/fail2drive/: Base_Animals_0075.xml  Base_Animals_0076.xml  Base_Animals_0077.xml  Base_Animals_0078.xml  Base_Animals_0079.xml  Base_Animals_0080.xml  Base_Animals_0081.xml  Base_Animals_0082.xml  Base_Animals_0083.xml  Base_Animals_0084.xml  Base_BadParking_0000.xml  Base_BadParking_0001.xml  Base_BadParking_0002.xml  Base_BadParking_0003.xml  Base_BadParking_0004.xml  Base_BadParking_0005.xml  Base_BadParking_0006.xml  Base_BadParking_0007.xml  Base_BadParking_0008.xml  Base_BadParking_0009.xml  Base_ConstructionPedestrian_0010.xml  Base_ConstructionPedestrian_0011.xml  Base_ConstructionPedestrian_0012.xml  Base_ConstructionPedestrian_0013.xml  Base_ConstructionPedestrian_0014.xml  Base_ConstructionPermutations_0015.xml  Base_ConstructionPermutations_0016.xml  Base_ConstructionPermutations_0017.xml  Base_ConstructionPermutations_0018.xml  Base_ConstructionPermutations_0019.xml  Base_CustomObstacles_0020.xml  Base_CustomObstacles_0021.xml  Base_CustomObstacles_0022.xml  Base_CustomObstacles_0023.xml  Base_CustomObstacles_0024.xml  Base_CustomObstacles_0025.xml  Base_CustomObstacles_0026.xml  Base_CustomObstacles_0027.xml  Base_CustomObstacles_0028.xml  Base_CustomObstacles_0029.xml  (+160 more)
docs/source/: known_issues.md
lead/: leaderboard_wrapper.py
lead/carl_agent/: carl_agent.py  distributions.py  model.py  nav_planner.py  rl_utils.py
lead/carl_agent/bev/: bev_observation.py  chauffeurnet.py  run_stop_sign.py  traffic_light.py  transforms.py
lead/common/: base_agent.py  common_utils.py  config_base.py  kalman_filter.py  logging_config.py  pid_controller.py  ransac.py  route_planner.py  sensor_setup.py
lead/data_buckets/: bucket.py  full_pretrain_bucket_collection.py  navsim_bucket_collection.py  route_filtering.py  town13_heldout_posttrain_bucket_collection.py  town13_heldout_pretrain_bucket_collection.py  waymo_bucket_collection.py
lead/data_loader/: carla_dataset.py  carla_dataset_utils.py  navsim_dataset.py  navsim_dataset_utils.py  training_cache.py  waymo_e2e_dataset.py
lead/expert/: config_expert.py  expert.py  expert_base.py  expert_data.py  expert_py123d.py  expert_py123d_utils.py  expert_utils.py  kinematic_bicycle_model.py  privileged_route_planner.py  scenario_sorter.py
lead/expert/hdmap/: birdview_map_opencv.py  chauffeurnet.py  run_stop_sign.py  traffic_light.py  transforms.py
lead/inference/: closed_loop_inference.py  inference_utils.py  infraction_recorder.py  open_loop_inference.py  sensor_agent.py  video_recorder.py
lead/infraction_webapp/: app.py
lead/tfv6/: bev_decoder.py  center_net_decoder.py  perspective_decoder.py  planning_decoder.py  radar_detector.py  tfv6.py  transfuser_backbone.py  transfuser_utils.py
lead/training/: config_training.py  logger.py  mixed_training_utils.py  rfs.py  train.py  training_utils.py
lead/visualization/: visualizer.py  viz_utils.py
scripts/: 123d_viser.py  build_buckets_posttrain.py  build_buckets_pretrain.py  build_cache.py  eval_fail2drive.sh  posttrain_ddp.sh  pretrain_ddp.sh  reset_carla_world.py  start_carla.sh
scripts/tools/: result_parser.py  route_bridge.py
scripts/tools/proxy_simulator/: carla_wrapper.py  prepare_map_data.py
slurm/: config_slurm.py  evaluate.sh  evaluate_expert.sh  init.sh  train.sh
slurm/data_collection/: collect_data.py  delete_failed_routes.py  print_collect_data_progress.py
slurm/evaluation/: evaluate.py  evaluate_scripts_generator.py  evaluate_utils.py  evaluate_wandb_logger.py  merge_route_json.py
slurm/experiments/001_example/: 050_fail2drive_0.sh  051_fail2drive_1.sh  052_fail2drive_2.sh
