[project]
name = "lead"
version = "0.0.1"
description = "LEAD: Minimizing Learner-Expert Asymmetry in End-to-End Driving"
requires-python = ">=3.10,<3.11"
dependencies = [
    "beartype==0.21.0",
    "diskcache==5.4.0",
    "filterpy==1.4.5",
    "Flask==3.1.1",
    "gym==0.17.2",
    "gymnasium==1.2.3",
    "h5py==3.7.0",
    "imgaug==0.4.0",
    "jaxtyping==0.3.2",
    "laspy==2.5.4",
    "matplotlib==3.10.3",
    "numba==0.61.2",
    "numpy==1.26.0",
    "omegaconf==2.3.0",
    "opencv-python==4.6.0.66",
    "pillow==10.2.0",
    "psutil==5.9.8",
    "scipy==1.14.1",
    "shapely==2.0.4",
    "timm==1.0.19",
    "torch==2.5.0",
    "torchvision==0.20.0",
    "torchaudio==2.5.0",
    "torchmetrics==0.11.0",
    "tqdm==4.66.1",
    "ujson==5.9.0",
    "wandb==0.16.6",
    "carla==0.9.15",
    "py123d==0.1.0",
    "setuptools==81.0.0",
    "tensorboard==2.20.0",
    "py-trees==0.8.3",
    "open3d>=0.19.0",
    "transforms3d==0.4.1",
    "simple-watchdog-timer>=0.1.1",
    "ephem==4.1.5",
    "dictor==0.1.12",
    "lxml==5.1.0",
    "networkx==3.4.2",
    "pexpect==4.9.0",
    "requests==2.32.5",
    "six==1.16.0",
    "tabulate==0.9.0",
    "PyQt5",
    "easydict==1.13",
    "jsonpickle==3.0.3",
]

[project.optional-dependencies]
dev = [
    "basedpyright==1.31.3",
    "ruff==0.12.4",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pre-commit==4.2.0",
    "nbstripout==0.8.1",
    "pydoclint==0.6.10",
    "jupyter>=1.1.1",
    "xmlformatter>=0.2.8",
    "xmlschema==1.0.18",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nbstripout==0.8.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lead*", "slurm*"]
exclude = ["data*", "outputs*", "notebooks*", "3rd_party*", "scripts*", "docs*", "tests*"]

[tool.setuptools.package-data]
lead = ["**/*"]

[tool.ruff]
line-length = 88

# Only check these directories
include = ["lead/**/*.py", "tests/**/*.py"]

# Ignore specific directories/files
exclude = [
    "3rd_party",
    "scripts",
    "lead/carl_agent"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E722", "F722", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
# Include directories to type check
include = ["lead", "tests"]

# Exclude directories from type checking
exclude = [
    "3rd_party",
    "scripts",
    "data",
    "outputs",
    "notebooks",
    "docs"
]

# Path to custom type stubs
stubPath = "3rd_party/typings"

# Type checking mode: "off", "basic", "standard", or "strict"
typeCheckingMode = "basic"

# Python environment settings
pythonPlatform = "Linux"
pythonVersion = "3.10"

# Reduce noise from libraries with incomplete type stubs (cv2, etc.)
# while still catching real errors in your own code
reportAttributeAccessIssue = "warning"
reportMissingImports = "warning"
