[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools==81" ]

[project]
name = "lead"
version = "0.0.1"
description = "LEAD: Minimizing Learner-Expert Asymmetry in End-to-End Driving"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [ { name = "Long Nguyen", email = "long@kesai.eu" } ]
requires-python = ">=3.10,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "beartype==0.21",
  "carla==0.9.15",
  "dictor==0.1.12",
  "diskcache==5.4",
  "easydict==1.13",
  "ephem==4.1.5",
  "filterpy==1.4.5",
  "flask==3.1.1",
  "gym==0.17.2",
  "gymnasium==1.2.3",
  "h5py==3.7",
  "imgaug==0.4",
  "jaxtyping==0.3.2",
  "jsonpickle==3.0.3",
  "laspy==2.5.4",
  "lxml==5.1",
  "matplotlib==3.10.3",
  "networkx==3.4.2",
  "numba==0.61.2",
  "numpy==1.26",
  "omegaconf==2.3",
  "open3d>=0.19",
  "opencv-python==4.6.0.66",
  "pexpect==4.9",
  "pillow==10.2",
  "psutil==5.9.8",
  "py-trees==0.8.3",
  "py123d==0.2.1",
  "pyqt5",
  "requests==2.32.5",
  "scipy==1.14.1",
  "setuptools==81",
  "shapely==2.0.4",
  "simple-watchdog-timer>=0.1.1",
  "six==1.16",
  "tabulate==0.9",
  "tensorboard==2.20",
  "timm==1.0.19",
  "torch==2.5",
  "torchaudio==2.5",
  "torchmetrics==0.11",
  "torchvision==0.20",
  "tqdm==4.66.1",
  "transforms3d==0.4.1",
  "ujson==5.9",
  "wandb==0.16.6",
]
optional-dependencies.dev = [
  "basedpyright==1.31.3",
  "jupyter>=1.1.1",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nbstripout==0.8.2",
  "pre-commit==4.2",
  "pydoclint==0.6.10",
  "pytest==9.0.2",
  "pytest-cov==7",
  "ruff==0.12.4",
  "xmlformatter>=0.2.8",
  "xmlschema==1.0.18",
]
urls.Homepage = "https://ln2697.github.io/lead"
urls.Repository = "https://github.com/kesai-labs/lead"

[tool.setuptools]
package-data.lead = [ "**/*" ]
packages.find.where = [ "." ]
packages.find.include = [ "lead*", "slurm*" ]
packages.find.exclude = [ "data*", "outputs*", "notebooks*", "3rd_party*", "scripts*", "docs*", "tests*" ]

[tool.uv]
sources.torch = [ { index = "pytorch-cu124" } ]
sources.torchaudio = [ { index = "pytorch-cu124" } ]
sources.torchvision = [ { index = "pytorch-cu124" } ]
index = [ { name = "pytorch-cu124", url = "https://download.pytorch.org/whl/cu124", explicit = true } ]

[tool.ruff]
line-length = 88
# Only check these directories
include = [ "lead/**/*.py", "tests/**/*.py" ]
# Ignore specific directories/files
exclude = [ "3rd_party", "scripts" ]
format.quote-style = "double"
lint.select = [ "B", "E", "F", "I", "UP" ]
lint.ignore = [ "E501", "E722", "F722" ]
